RESOLVED FIXED311463
StringImpl::characterStartingAt should return lone surrogates instead of 0
https://bugs.webkit.org/show_bug.cgi?id=311463
Summary StringImpl::characterStartingAt should return lone surrogates instead of 0
Chris Dumez
Reported 2026-04-04 00:33:58 PDT
StringImpl::characterStartingAt should return lone surrogates instead of 0.
Attachments
Chris Dumez
Comment 1 2026-04-04 01:03:51 PDT
EWS
Comment 2 2026-04-04 03:19:01 PDT
Committed 310568@main (e94c2e91e239): <https://commits.webkit.org/310568@main> Reviewed commits have been landed. Closing PR #62023 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-04 03:20:13 PDT
Note You need to log in before you can comment on or make changes to this bug.